fixx gap latest news and latest news

--- a/css/styles.css
+++ b/css/styles.css
@@ -313,7 +313,7 @@
 /* ----------------------------  Styles  -------------------------------- */
 
 .gap {
-  gap: 35px;
+  column-gap: 37px;
 }
 
 .style-none {
@@ -1024,10 +1024,6 @@ header {
   width: 100%;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-}
-
-.deals-li {
-  margin: auto 15px 25px 15px;
 }
 
 /* ----------------------------  Media Queries  -------------------------------- */
